# stlrcore

./: Pipfile  README.md  astral.py  config.toml  config.yaml  impatient.py  pyproject.toml  readme.md  requirements.txt  selene.py  stlr.py  étoile.py
src/stlr/: transcribe.py  transcription_models.py
stlr/: __init__.py  astral.py  audio.py  audio_utils.py  cli_utils.py  config.py  hoshi.py  image.py  models.py  seleneapp.py  stlrapp.py  transcribe.py  ui.py  utils.py  vn.py
